Ajout des Sprites de Céleste et GM

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <h2>• Pourquoi je fais ce site ?</h2>
   <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela. Bien sûr, je sais que d'autres langages utilisés notamment dans le web viendront s'ajouter à mon panel
   de connaissances, petit à petit.</p>
-  <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquisent ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
+  <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquises ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
   Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine du mutlimédia et internet.</p>
   <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, ou seule, qui me tiennent à coeur, et que je vous laisse découvrir
     parmis ces pages web, qui elles aussi font partie intégrante de ces projets encore en cours.</p>
