--- a/projets.html
+++ b/projets.html
@@ -90,7 +90,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 </div>
 
 <h3>- Les dessins de Blue Bird -</h3>
-  <p>Blasons des planètes dessinés à ce jour :</p>
+  <p>• Blasons des planètes dessinés à ce jour :</p>
 
 <div class="dessinshistoires">
 
@@ -101,7 +101,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 </div>
 
-  <p>Personnages dessinés à ce jour :</p>
+  <p>• Personnages dessinés à ce jour :</p>
 
 <div class="dessinshistoires">
 
@@ -119,7 +119,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
     <h3>- Encore sans nom -</h3>
     <p>Dans notre monde, un établissement scolaire se démarque des autres. Connu pour abriter les enfants de magiciens, ainsi que certains nommés Voyageurs, il forme ces jeunes gens aux périples de la vie lorsque l’on possède des pouvoirs. Ce monde magique, est régit par quatre clans, dont celui des Abysses est le chef suprême. Ils supervisent deux établissements de magie, dont un lycée situé à Saumur, composé de magiciens et de sans-magie. Un établissement mixte.<br>
       Loin de là, dans d’autres époques, vagabonde illégalement une bande de gamins surmontés tous de la même casquette, et semblent tout droit sortis d’une vieille usine. C’est le cas.<br>
-      Parmi eux, la seule jeune fille du groupe, à l’aube de ses dix-sept ans, possède la magie du voyage temporel. Les régisseurs de la magie, qui ne souhaitent pas d’écart, et de son côté, Eléonore en fait constamment, menaçant parfois l’ordre logique des choses, est l'une des cibles du clan. Alors qu’elle est recherchée dans toutes les époques, la jeune fille décide de se jeter dans la gueule du loup et d’intégrer le lycée de magie de Saumur. Elle se considérera alors plus maligne que les autres, sachant certaines choses, supposées disparues depuis longtemps…
+      Parmi eux, la seule jeune fille du groupe, à l’aube de ses dix-sept ans, possède la magie du voyage temporel. Les régisseurs de la magie, qui ne souhaitent pas d’écart en matière de magie, et de son côté, Eléonore menaçe parfois l’ordre logique des choses, est l'une des cibles du clan. Alors qu’elle est recherchée dans toutes les époques, la jeune fille décide de se jeter dans la gueule du loup et d’intégrer le lycée de magie de Saumur. Elle se considérera alors plus maligne que les autres, sachant certaines choses, supposées disparues depuis longtemps…
     </p>
   </div>
 
@@ -129,7 +129,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 </div>
 
 <h3>- Les dessins de "Encore sans nom" -</h3>
-  <p>Personnages dessinés à ce jour (oui il y en a beaucoup d'autres eheh) : </p>
+  <p>• Personnages dessinés à ce jour (oui il y en a beaucoup d'autres eheh) : </p>
 
 <div class="dessinshistoires">
 
@@ -143,7 +143,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 </div>
 
-   <p>Autres dessins de la même histoire :</p>
+   <p>• Autres dessins de la même histoire :</p>
 
 <div class="dessinshistoires">
 
@@ -183,6 +183,16 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <p>On remarque effectivement qu'il n'y a pas grand chose pour le moment, en terme d'histoire ou bien de déplacement mais cela reste un début prometteur !</p>
 
+<div class="celeste">
+  <p>• Entre autre, voici donc Céleste, le personnage principal :</p>
+  <img src="images/celeste.png" alt="celeste" width="15%">
+  <p>• Ainsi que le personnage du Grand Maitre, pas encore ajouté dans le jeu :</p>
+  <img src="images/grandmaitre.png" alt="grandmaitre" width="15%">
+</div>
+
+<p>► Les personnages sont destinés eux aussi à être refaient dans un furur proche (leurs sprites, je veux dire, parce qu'entre Céleste dont on a l'impression qu'elle glisse sur le sol plus qu'elle ne marche
+  et danse le french cancan sur le côté, bon.)</p>
+
 <h3>- Les musiques de Blue Bird  -</h3>
 <p>Pour le moment, on ne compte que deux musiques réalisées, il est vrai que cela est peu, mais plusieurs facteurs en ont décidés ainsi. De plus, il n'y en a malheureusement pas de nouvelles prévues
 à ce jour, donc il faudra se contenter de cela (｡•́︿•̀｡) <br>
@@ -190,9 +200,9 @@ D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet 
 </p>
 
 <div class="musiquesjeu">
-    <p>Musique destinée normalement au menu</p>
+    <p>• Musique destinée normalement au menu</p>
   <audio src="images/sons/MusiqueMenu.mp3" controls>Musique1</audio>
-    <p>Musique destinée normalement aux couloirs</p>
+    <p>• Musique destinée normalement aux couloirs</p>
   <audio src="images/sons/MusiqueCouloirs.mp3" controls>Musique2</audio>
 </div>
 
