Ajout d'autres dessins

--- a/projets.html
+++ b/projets.html
@@ -13,7 +13,7 @@
   <header>
 
     <img src="images/me3.png" alt="Logo du site" width="16%" height="16%"/>
-    <h1> Little adventuress </h1>
+    <h1 id="hautpage"> Little adventuress </h1>
     <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
   </header>
@@ -52,25 +52,40 @@
 
 <div class="Dessin">
   <h2 id="dessin">• Le dessin</h2>
-  <p>Je classe ici mes dessins qui n'ont pas de lien avec les histoires référencées ici. Ils sont réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.
-  Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro V1, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
+  <h3>Je classe ici mes dessins qui n'ont pas de lien avec les histoires référencées ici. Ils sont réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.</h3>
+  <p>► Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro V1, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
+
+<p>• Derniers dessins réalisés :</p>
 
   <div class="imgdessin">
-
-   <img src="images/imgdessins/artwork1.png" alt="img1" width="40%" height="40%">
-
-   <img src="images/imgdessins/Dragon.png" alt="img2" width="40%" height="40%">
-
+    <img src="images/imgdessins/artwork1.png" alt="img1" width="40%" height="40%">
+    <img src="images/imgdessins/Dragon.png" alt="img2" width="40%" height="40%">
   </div>
 
+<p>• Dessins réalisés dans le cadre d'un projet d'arts visuels en classe de Seconde :</p>
+
+  <div class="imgdessin">
+    <img src="images/imgdessins/artsvisuels1.png" alt="artsvisuels1" width="15%" height="15%">
+    <img src="images/imgdessins/artsvisuels2.png" alt="artsvisuels2" width="35%" height="35%">
+    <img src="images/imgdessins/artsvisuels4.png" alt="artsvisuels4" width="35%" height="35%">
+  </div>
+
+<p>• Autres dessins réalisés :</p>
+
+  <div class="imgdessin">
+    <img src="images/imgdessins/phare.png" alt="phare" width="50%" height="50%">
+  </div>
+
+<p><a href="#hautpage">- Retourner en haut de la page</a></p>
 </div>
+
 
 <div class="Ecriture">
 
   <h2 id="ecriture">• L'écriture (+ Dessins)</h2>
-  <p>  Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
-  cinématographiques, connues plus ou moins. Néanmoins, elle viennes forcément de mon imagination. <br>
-Depuis que mes histoires se font plus concrètes malgré les diverses modifications que j'y apporte à longueur de temps, j'ai souhaité de plus en plus illustrer mes idées en réalisant
+  <h3>Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
+  cinématographiques, connues plus ou moins. Néanmoins, elles viennent forcément de mon imagination.</h3>
+<p>► Depuis que mes histoires se font plus concrètes malgré les diverses modifications que j'y apporte à longueur de temps, j'ai souhaité de plus en plus illustrer mes idées en réalisant
 au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'accompagne également les personnages et, si je les ai dessinés, les paysages. </p>
 
 </div>
@@ -110,8 +125,16 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 <img src="images/imgdessins/maewenn.png" alt="maewenn" width="15%" height="15%">
 <img src="images/imgdessins/roi.png" alt="roi" width="15%" height="15%">
 
-
   </div>
+
+  <p>• Autres dessins de la même histoire :</p>
+
+<div class="dessinshistoires">
+
+<img src="images/imgdessins/desert1.png" alt="desert" width="40%" height="40%">
+<img src="images/imgdessins/espace.png" alt="espace" width="40%" height="40%">
+
+</div>
 
 <div class="Trident">
 
@@ -151,14 +174,17 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
   <img src="images/imgdessins/LianaEleonoreVoiture.jpg" alt="LianaEleonoreVoiture" width="30%" height="30%">
 
 </div>
+<p><a href="#hautpage">- Retourner en haut de la page</a></p>
 
 <div class="Photo">
   <h2 id="photo">• La photographie</h2>
+
+  <p><a href="#hautpage">- Retourner en haut de la page</a></p>
 </div>
 
 <div class="Projets">
   <h2 id="Projets">• Projets communs</h2>
-  <p>Les projets communs regroupent ici ceux effectués avec mes amis. Au nombre de trois fonctionnels actuellement (moi comprise), chacun possède son rôle.</p>
+  <h3>Les projets communs regroupent ici ceux effectués avec mes amis. Au nombre de trois fonctionnels actuellement (moi comprise), chacun possède son rôle.</h3>
 
   <h4>- Membres du groupe</h4>
   <ul>
@@ -181,7 +207,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 </div>
 
-<p>On remarque effectivement qu'il n'y a pas grand chose pour le moment, en terme d'histoire ou bien de déplacement mais cela reste un début prometteur !</p>
+<p>► On remarque effectivement qu'il n'y a pas grand chose pour le moment, en terme d'histoire ou bien de déplacement mais cela reste un début prometteur !</p>
 
 <div class="celeste">
   <p>• Entre autre, voici donc Céleste, le personnage principal :</p>
@@ -206,6 +232,7 @@ D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet 
   <audio src="images/sons/MusiqueCouloirs.mp3" controls>Musique2</audio>
 </div>
 
+<p><a href="#hautpage">- Retourner en haut de la page</a></p>
 </div>
 
 
