Réarangement imgs et redimensionnements

--- a/projets.html
+++ b/projets.html
@@ -58,22 +58,22 @@
 <p>• Derniers dessins réalisés :</p>
 
   <div class="imgdessin">
-    <img src="images/imgdessins/artwork1.png" alt="img1" width="40%" height="40%">
-    <img src="images/imgdessins/Dragon.png" alt="img2" width="40%" height="40%">
+    <p><a href="images/imgdessins/realimg/artwork1.png" target="_blank"><img src="images/imgdessins/artwork1mini.jpg" alt="img1" title="Cliquez pour agrandir !" height="300px"></a></p>
+    <p><a href="images/imgdessins/realimg/Dragon.png" target="_blank"><img src="images/imgdessins/Dragonmini.jpg" alt="img2" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
 
 <p>• Dessins réalisés dans le cadre d'un projet d'arts visuels en classe de Seconde :</p>
 
   <div class="imgdessin">
-    <img src="images/imgdessins/artsvisuels1.png" alt="artsvisuels1" width="15%" height="15%">
-    <img src="images/imgdessins/artsvisuels2.png" alt="artsvisuels2" width="35%" height="35%">
-    <img src="images/imgdessins/artsvisuels4.png" alt="artsvisuels4" width="35%" height="35%">
+  <p><a href="images/imgdessins/realimg/artsvisuels1.png" target="_blank"><img src="images/imgdessins/artsvisuels1mini.jpg" alt="artsvisuels1" title="Cliquez pour agrandir !" height="300px"></a></p>
+  <p><a href="images/imgdessins/realimg/artsvisuels2.png" target="_blank"><img src="images/imgdessins/artsvisuels2mini.jpg" alt="artsvisuels2" title="Cliquez pour agrandir !" height="300px"></a></p>
+  <p><a href="images/imgdessins/realimg/artsvisuels4.png" target="_blank"><img src="images/imgdessins/artsvisuels4mini.jpg" alt="artsvisuels4" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
 
 <p>• Autres dessins réalisés :</p>
 
   <div class="imgdessin">
-    <img src="images/imgdessins/phare.png" alt="phare" width="50%" height="50%">
+  <p><a href="images/imgdessins/realimg/phare.png" target="_blank"><img src="images/imgdessins/pharemini.jpg" alt="phare" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
 
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
@@ -109,10 +109,10 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <div class="dessinshistoires">
 
-<img src="images/imgdessins/saguaroblason.png" alt="saguaro" width="20%" height="20%">
-<img src="images/imgdessins/blasonabutilon.png" alt="abutilon" width="20%" height="20%">
-<img src="images/imgdessins/blasonastragale.png" alt="astragale" width="20%" height="20%">
-<img src="images/imgdessins/blasonandrosace.png" alt="androsace" width="20%" height="20%">
+<p><a href="images/imgdessins/realimg/saguaroblason.png" target="_blank"><img src="images/imgdessins/saguaroblasonmini.jpg" alt="saguaro" title="Cliquez pour agrandir !" height="200px"></a></p>
+<p><a href="images/imgdessins/realimg/blasonabutilon.png" target="_blank"><img src="images/imgdessins/blasonabutilonmini.jpg" alt="abutilon" title="Cliquez pour agrandir !" height="200px"></a></p>
+<p><a href="images/imgdessins/realimg/blasonastragale.png" target="_blank"><img src="images/imgdessins/blasonastragalemini.jpg" alt="astragale" title="Cliquez pour agrandir !" height="200px"></a></p>
+<p><a href="images/imgdessins/realimg/blasonandrosace.png" target="_blank"><img src="images/imgdessins/blasonandrosacemini.jpg" alt="androsace" title="Cliquez pour agrandir !" height="200px"></a></p>
 
 </div>
 
@@ -120,10 +120,10 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <div class="dessinshistoires">
 
-<img src="images/imgdessins/gmetceleste.png" alt="gmetceleste" width="19%" height="19%">
-<img src="images/imgdessins/melia.png" alt="melia" width="15%" height="15%">
-<img src="images/imgdessins/maewenn.png" alt="maewenn" width="15%" height="15%">
-<img src="images/imgdessins/roi.png" alt="roi" width="15%" height="15%">
+<p><a href="images/imgdessins/realimg/gmetceleste.png" target="_blank"><img src="images/imgdessins/gmetcelestemini.png" alt="gmetceleste" title="Cliquez pour agrandir !" height="400px"></a> </p>
+<p><a href="images/imgdessins/realimg/melia.png" target="_blank"><img src="images/imgdessins/meliamini.png" alt="melia" title="Cliquez pour agrandir !" height="400px"></a> </p>
+<p><a href="images/imgdessins/realimg/maewenn.png" target="_blank"><img src="images/imgdessins/maewennmini.png" alt="maewenn" title="Cliquez pour agrandir !" height="400px"></a></p>
+<p><a href="images/imgdessins/realimg/roi.png" target="_blank"><img src="images/imgdessins/roimini.png" alt="roi" title="Cliquez pour agrandir !" height="400px"></a></p>
 
   </div>
 
@@ -131,8 +131,8 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <div class="dessinshistoires">
 
-<img src="images/imgdessins/desert1.png" alt="desert" width="40%" height="40%">
-<img src="images/imgdessins/espace.png" alt="espace" width="40%" height="40%">
+<p><a href="images/imgdessins/realimg/desert1.png" target="_blank"><img src="images/imgdessins/desert1mini.jpg" alt="desert" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/espace.png" target="_blank"><img src="images/imgdessins/espacemini.jpg" alt="espace" title="Cliquez pour agrandir !" height="300px"></a></p>
 
 </div>
 
@@ -156,13 +156,14 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <div class="dessinshistoires">
 
-<img src="images/imgdessins/eleonore.png" alt="eleonore" width="10%" height="10%">
-<img src="images/imgdessins/liana.png" alt="liana" width="10%" height="10%">
-<img src="images/imgdessins/leonard.png" alt="leonard" width="10%" height="10%">
-<img src="images/imgdessins/Wladimir.png" alt="wladimir" width="10%" height="10%">
-<img src="images/imgdessins/Dora.png" alt="dora" width="10%" height="10%">
-<img src="images/imgdessins/Flora.png" alt="flora" width="10%" height="10%">
-<img src="images/imgdessins/Daniella.png" alt="daniella" width="10%" height="10%">
+
+<p><a href="images/imgdessins/realimg/eleonore.png" target="_blank"><img src="images/imgdessins/eleonoremini.jpg" alt="eleonore" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/liana.png" target="_blank"><img src="images/imgdessins/lianamini.jpg" alt="liana" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/leonard.png" target="_blank"><img src="images/imgdessins/leonardmini.jpg" alt="leonard" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/Wladimir.png" target="_blank"><img src="images/imgdessins/Wladimirmini.jpg" alt="wladimir" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/Dora.png" target="_blank"><img src="images/imgdessins/Doramini.jpg" alt="dora" title="Cliquez pour agrandir !"  height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/Flora.png" target="_blank"><img src="images/imgdessins/Floramini.jpg" alt="flora" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/Daniella.png" target="_blank"><img src="images/imgdessins/Daniellamini.jpg" alt="daniella" title="Cliquez pour agrandir !" height="300px"></a> </p>
 
 </div>
 
@@ -170,8 +171,8 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <div class="dessinshistoires">
 
-  <img src="images/imgdessins/SaumurLianaEleonore.png" alt="SaumurLianaEleonore" width="44%" height="44%">
-  <img src="images/imgdessins/LianaEleonoreVoiture.jpg" alt="LianaEleonoreVoiture" width="30%" height="30%">
+<p><a href="images/imgdessins/realimg/SaumurLianaEleonore.png" target="_blank"><img src="images/imgdessins/SaumurLianaEleonoremini.png" alt="SaumurLianaEleonore" title="Cliquez pour agrandir !" height="300px" /></a></p>
+<p><a href="images/imgdessins/realimg/LianaEleonoreVoiture.jpg" target="_blank"><img src="images/imgdessins/LianaEleonoreVoituremini.png" alt="LianaEleonoreVoiture"  title="Cliquez pour agrandir !" height="300px"/></a></p>
 
 </div>
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
