--- a/projets.html
+++ b/projets.html
@@ -74,6 +74,7 @@
 
   <div class="imgdessin">
   <p><a href="images/imgdessins/realimg/phare.png" target="_blank"><img src="images/imgdessins/pharemini.jpg" alt="phare" title="Cliquez pour agrandir !" height="300px"></a></p>
+  <p><a href="images/imgdessins/realimg/anjouvelo.png" target="_blank"><img src="images/imgdessins/anjouvelomini.jpg" alt="anjouvelo" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
 
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
