copyright + mvmt dessins

--- a/projets.html
+++ b/projets.html
@@ -57,14 +57,14 @@
 
 <p>• Derniers dessins réalisés :</p>
 
-  <div class="imgdessin">
+  <div class="dessinshistoires">
     <p><a href="images/imgdessins/realimg/artwork1.png" target="_blank"><img src="images/imgdessins/artwork1mini.jpg" alt="img1" title="Cliquez pour agrandir !" height="300px"></a></p>
     <p><a href="images/imgdessins/realimg/Dragon.png" target="_blank"><img src="images/imgdessins/Dragonmini.jpg" alt="img2" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
 
 <p>• Dessins réalisés dans le cadre d'un projet d'arts visuels en classe de Seconde :</p>
 
-  <div class="imgdessin">
+  <div class="dessinshistoires">
   <p><a href="images/imgdessins/realimg/artsvisuels1.png" target="_blank"><img src="images/imgdessins/artsvisuels1mini.jpg" alt="artsvisuels1" title="Cliquez pour agrandir !" height="300px"></a></p>
   <p><a href="images/imgdessins/realimg/artsvisuels2.png" target="_blank"><img src="images/imgdessins/artsvisuels2mini.jpg" alt="artsvisuels2" title="Cliquez pour agrandir !" height="300px"></a></p>
   <p><a href="images/imgdessins/realimg/artsvisuels4.png" target="_blank"><img src="images/imgdessins/artsvisuels4mini.jpg" alt="artsvisuels4" title="Cliquez pour agrandir !" height="300px"></a></p>
@@ -72,7 +72,7 @@
 
 <p>• Autres dessins réalisés :</p>
 
-  <div class="imgdessin">
+  <div class="dessinshistoires">
   <p><a href="images/imgdessins/realimg/phare.png" target="_blank"><img src="images/imgdessins/pharemini.jpg" alt="phare" title="Cliquez pour agrandir !" height="300px"></a></p>
   <p><a href="images/imgdessins/realimg/anjouvelo.png" target="_blank"><img src="images/imgdessins/anjouvelomini.jpg" alt="anjouvelo" title="Cliquez pour agrandir !" height="300px"></a></p>
   </div>
