actualisation + retrait temporaire 2 pages

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <p><a href="projets.html">Projets and hobbys</a></p>
 
-    <p><a href="lectures.html">Lectures</a></p>
+    <!--<p><a href="lectures.html">Lectures</a></p>
 
-    <p><a href="voyages.html">Voyages</a></p>
+    <p><a href="voyages.html">Voyages</a></p>-->
 
   </nav>
 
@@ -56,25 +56,25 @@
 
     <div class="labio">
       <h2>• Qui suis-je ?</h2>
-      <h4>- Player profile</h4>
+      <h4>- Profil du joueur</h4>
       <ul>
-        <li>SURNAME : Vergnaud</li>
-        <li>NAME : Amélie</li>
-        <li>USER NAME : Hasphodelle49</li>
-        <li>XP'S YEARS : 19</li>
+        <li>NOM : Vergnaud</li>
+        <li>PRENOM : Amélie</li>
+        <li>NOM D'UTILISATEUR : Hasphodelle49</li>
+        <li>XP : 19</li>
       </ul>
       <h4>- Zones Importantes</h4>
       <ul>
-        <li>SPAWN : Nantes - France</li>
-        <li>SAVE : Abu Dhabi - Emirats arabes unis</li>
-        <li>FAVORITE PLACE : Saumur - France</li>
+        <li>POINT D'APPARITION : Nantes - France</li>
+        <li>SAUVEGARDE ACTUELLE : Abu Dhabi - Emirats arabes unis</li>
+        <li>FAVORI : Saumur - France</li>
       </ul>
-      <h4>- Hobbys </h4>
+      <h4>- Centres d'intérêt </h4>
       <ul>
         <li>Dessin</li>
         <li>Ecriture</li>
         <li>Photographie</li>
-        <li>Jeux vidéos</li>
+        <li>Jeux-vidéos</li>
       </ul>
     </div>
 
@@ -99,8 +99,8 @@
 
 <footer>
 
-<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" width='5%' title="Vers ma page linkedin !"></a>
-<a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
+<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>
+<p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
 
 </footer>
 </body>
