--- a/projets.html
+++ b/projets.html
@@ -24,9 +24,9 @@
 
     <p><a href="projets.html" class="pageactuelle">Projets and hobbys</a></p>
 
-    <p><a href="lectures.html">Lectures</a></p>
+    <!--<p><a href="lectures.html">Lectures</a></p>
 
-    <p><a href="voyages.html">Voyages</a></p>
+    <p><a href="voyages.html">Voyages</a></p>-->
 
   </nav>
 
@@ -51,7 +51,7 @@
 </div>
 
 <div class="Dessin">
-  <h2 id="dessin">• Le dessin</h2>
+  <h2 id="dessin" class="h2projets">• Le dessin •</h2>
   <h3>Je classe ici mes dessins qui n'ont pas de lien avec les histoires référencées ici. Ils sont réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.</h3>
   <p>► Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro V1, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
 
@@ -83,7 +83,7 @@
 
 <div class="Ecriture">
 
-  <h2 id="ecriture">• L'écriture (+ Dessins)</h2>
+  <h2 id="ecriture" class="h2projets">• L'écriture (+ Dessins) •</h2>
   <h3>Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
   cinématographiques, connues plus ou moins. Néanmoins, elles viennent forcément de mon imagination.</h3>
 <p>► Depuis que mes histoires se font plus concrètes malgré les diverses modifications que j'y apporte à longueur de temps, j'ai souhaité de plus en plus illustrer mes idées en réalisant
@@ -179,13 +179,17 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
 
 <div class="Photo">
-  <h2 id="photo">• La photographie</h2>
+  <h2 id="photo" class="h2projets">• La photographie •</h2>
+  <h3>Ici, je ne mettrais pas beaucoup de photos, par contre, j'ai un compte Instagram dédié à cette activité. Je ne pratique pas depuis très longtemps, seul mon appareil photo peut-être
+  condidéré comme pro à l'heure actuelle.</h3>
+  <p>► Je ne suis que photographe amatrice, prenant quelques clichés par moments, mais sans grandes connaissances dans le domaine. Je possède un Lumix G9 mais je cherche encore à le découvrir encore aujourd'hui.</p>
+
 
   <p><a href="#hautpage">- Retourner en haut de la page</a></p>
 </div>
 
 <div class="Projets">
-  <h2 id="Projets">• Projets communs</h2>
+  <h2 id="Projets" class="h2projets">• Projets communs •</h2>
   <h3>Les projets communs regroupent ici ceux effectués avec mes amis. Au nombre de trois fonctionnels actuellement (moi comprise), chacun possède son rôle.</h3>
 
   <h4>- Membres du groupe</h4>
@@ -218,8 +222,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
   <img src="images/grandmaitre.png" alt="grandmaitre" width="15%">
 </div>
 
-<p>► Les personnages sont destinés eux aussi à être refaient dans un furur proche (leurs sprites, je veux dire, parce qu'entre Céleste dont on a l'impression qu'elle glisse sur le sol plus qu'elle ne marche
-  et danse le french cancan sur le côté, bon.)</p>
+<p>► Les personnages sont destinés eux aussi à être refait dans un futur proche, je parle spécialement de leurs mouvements, en particulier, forcément, le personnage principal, Céleste, qui se déplace bizarrement, avouons le...</p>
 
 <h3>- Les musiques de Blue Bird  -</h3>
 <p>Pour le moment, on ne compte que deux musiques réalisées, il est vrai que cela est peu, mais plusieurs facteurs en ont décidés ainsi. De plus, il n'y en a malheureusement pas de nouvelles prévues
@@ -240,10 +243,10 @@ D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet 
 
 <footer>
 
-<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" width='5%' title="Vers ma page linkedin !"></a>
-<a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
-
+<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>
+<p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
 
 </footer>
+
 </body>
 </html>
