--- a/lectures.html
+++ b/lectures.html
@@ -91,8 +91,8 @@ Ole!</h3>
 
 <footer>
 
-<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" width='5%' title="Vers ma page linkedin !"></a>
-<a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
+<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>
+<p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
 
 </footer>
 </body>
