ajout livraddict + 3 images trident

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <ul>
         <li>Dessin</li>
         <li>Ecriture</li>
+        <li>Lecture</li>
         <li>Photographie</li>
         <li>Jeux-vidéos</li>
       </ul>
@@ -99,8 +100,9 @@
 
 <footer>
 
-<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>
+<!--<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>-->
 <p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
+<p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" height='100px' title="Vers mon compte Livraddict !"></a></p>
 
 </footer>
 </body>
