--- a/projets.html
+++ b/projets.html
@@ -174,6 +174,10 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <p><a href="images/imgdessins/realimg/SaumurLianaEleonore.png" target="_blank"><img src="images/imgdessins/SaumurLianaEleonoremini.png" alt="SaumurLianaEleonore" title="Cliquez pour agrandir !" height="300px" /></a></p>
 <p><a href="images/imgdessins/realimg/LianaEleonoreVoiture.jpg" target="_blank"><img src="images/imgdessins/LianaEleonoreVoituremini.png" alt="LianaEleonoreVoiture"  title="Cliquez pour agrandir !" height="300px"/></a></p>
+<p><a href="images/imgdessins/realimg/eleonore1.png" target="_blank"><img src="images/imgdessins/eleonore1mini.png" alt="eleonore1" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/L&E.png" target="_blank"><img src="images/imgdessins/L&Emini.png" alt="L&E" title="Cliquez pour agrandir !" height="300px"></a></p>
+<p><a href="images/imgdessins/realimg/D&W.png" target="_blank"><img src="images/imgdessins/D&Wmini.png" alt="D&W" title="Cliquez pour agrandir !" height="300px"></a></p>
+
 
 </div>
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
@@ -197,7 +201,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
     <li>HASPHODELLE (c'est moi uwu) : cheffe de projet - écrivaine du scénario - réalise les sprites des personnages </li>
     <li>DAGUERIAN : Codeur</li>
     <li>F0XY : réalisateur des décors et environnement visuels du jeu</li>
-    <li>CREEPOSUC : musicien</li>
+    <li>CREEPOSUC : musicien (retiré du projet)</li>
   </ul>
 
   <p>Le projet, lourd, conséquent, mais qui nous tient à coeur, possède comme pilier l'histoire de Blue Bird expliquée plus haut dans la rubrique L'écriture. En effet, cette histoire tend à
@@ -243,8 +247,9 @@ D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet 
 
 <footer>
 
-<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>
+<!--<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>-->
 <p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
+<p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" height='100px' title="Vers mon compte Livraddict !"></a></p>
 
 </footer>
 
