ajout de liens + début page jeux vidéo(encorenonapparente)

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <p><a href="index.html" class="pageactuelle">Accueil</a></p>
 
-    <p><a href="projets.html">Projets and hobbys</a></p>
+    <p><a href="projets.html">Projets et hobbys</a></p>
 
-    <!--<p><a href="lectures.html">Lectures</a></p>
+    <!--<p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>-->
 
-    <p><a href="voyages.html">Voyages</a></p>-->
+    <!--<p><a href="voyages.html">Voyages</a></p>-->
 
   </nav>
 
@@ -103,6 +103,8 @@
 <!--<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>-->
 <p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
 <p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" height='100px' title="Vers mon compte Livraddict !"></a></p>
+<p><a href="https://www.wattpad.com/user/Hasphodelle49" target="_blank"><img src="images/wattpad.png" alt="wattpad" height="100px" title="Vers mon compte Wattpad !"></a></p>
+<p><a href="https://github.com/Hasphodelle49" target="_blank"><img src="images/github.png" alt="github" height="100px" title="Vers mon compte Github !"></a></p>
 
 </footer>
 </body>
