--- a/projets.html
+++ b/projets.html
@@ -22,11 +22,11 @@
 
     <p><a href="index.html">Accueil</a></p>
 
-    <p><a href="projets.html" class="pageactuelle">Projets and hobbys</a></p>
+    <p><a href="projets.html" class="pageactuelle">Projets et hobbys</a></p>
 
-    <!--<p><a href="lectures.html">Lectures</a></p>
+    <!--<p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>-->
 
-    <p><a href="voyages.html">Voyages</a></p>-->
+    <!--<p><a href="voyages.html">Voyages</a></p>-->
 
   </nav>
 
@@ -46,7 +46,7 @@
 <div class="lieninterpage">
   <p><a href="#dessin">Dessin</a></p>
   <p><a href="#ecriture">Ecriture</a></p>
-  <p><a href="#photo">Photo</a></p>
+  <!--<p><a href="#photo">Photo</a></p>-->
   <p><a href="#Projets">Projets communs</a></p>
 </div>
 
@@ -182,7 +182,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 </div>
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
 
-<div class="Photo">
+<!--<div class="Photo">
   <h2 id="photo" class="h2projets">• La photographie •</h2>
   <h3>Ici, je ne mettrais pas beaucoup de photos, par contre, j'ai un compte Instagram dédié à cette activité. Je ne pratique pas depuis très longtemps, seul mon appareil photo peut-être
   condidéré comme pro à l'heure actuelle.</h3>
@@ -190,7 +190,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 
   <p><a href="#hautpage">- Retourner en haut de la page</a></p>
-</div>
+</div>-->
 
 <div class="Projets">
   <h2 id="Projets" class="h2projets">• Projets communs •</h2>
@@ -250,6 +250,8 @@ D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet 
 <!--<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>-->
 <p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
 <p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" height='100px' title="Vers mon compte Livraddict !"></a></p>
+<p><a href="https://www.wattpad.com/user/Hasphodelle49" target="_blank"><img src="images/wattpad.png" alt="wattpad" height="100px" title="Vers mon compte Wattpad !"></a></p>
+<p><a href="https://github.com/Hasphodelle49" target="_blank"><img src="images/github.png" alt="github" height="100px" title="Vers mon compte Github !"></a></p>
 
 </footer>
 
